# ehata

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  ehata.spec
dotnet/: ehata_dotnet.sln
dotnet/ITS.Propagation.EHata/: EHata.cs  Enums.cs  ITS.Propagation.EHata.csproj  IntermediateValues.cs
dotnet/ITS.Propagation.EHata/Properties/: AssemblyInfo.cs
dotnet/nuget/: ExtendedHata.nuspec
include/: ehata.h
src/: ExtendedHata.cpp  FindHorizons.cpp  FindQuantile.cpp  FineRollingHillyTerrainCorectionFactor.cpp  FineRollingHillyTerrainCorrectionFactor.cpp  GeneralSlopeCorrectionFactor.cpp  IsolatedRidgeCorrectionFactor.cpp  LeastSquares.cpp  MedianBasicPropLoss.cpp  MedianRollingHillyTerrainCorrectionFactor.cpp  MixedPathCorrectionFactor.cpp  PreprocessTerrainPath.cpp  Variability.cpp
test/: test-inputs.csv
win32/: eHata.sln
win32/BVT/: BVT.csproj  TestDataGenerator.cs  TestInput.cs  UnitTests.cs
win32/BVT/Properties/: AssemblyInfo.cs
win32/NTIA.Propagation.EHata/: EHata.cs  NTIA.Propagation.EHata.csproj
win32/NTIA.Propagation.EHata/Properties/: AssemblyInfo.cs
win32/ehata/: AssemblyInfo.rc  ehata.def  ehata.rc  ehata.vcxproj  resource.h
